Overflow issues

--- a/blog.css
+++ b/blog.css
@@ -6,7 +6,9 @@ html, body {
   display: flex;
   flex-direction: column;
   overflow-x: hidden;  /* Prevents horizontal overflow */
+  width: 100%;
 }
+
 
 .blogs {
   display: flex;
