--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
 nav { 
   background-color: #ffeeee;
   height: auto;
