--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,8 @@
+
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
 body{
   margin: 0px;
   padding: 0px;
